--- a/templates/default/opening-hour.html.twig
+++ b/templates/default/opening-hour.html.twig
@@ -4,7 +4,7 @@
 
 
 
-{% include 'layout/opening-hour.html.twig' %}
+{#{% include 'layout/opening-hour.html.twig' %}#}
 
 {% include 'layout/what-we-offer.html.twig' %}
 
